--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,20 @@
 	<artifactId>gestion-patient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gestion-patient</name>
-	<description>gestion-patient</description>
-
-
+	<description>Gestion de patient</description>
+	<url/>
+	<licenses>
+		<license/>
+	</licenses>
+	<developers>
+		<developer/>
+	</developers>
+	<scm>
+		<connection/>
+		<developerConnection/>
+		<tag/>
+		<url/>
+	</scm>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
